gccida/c0/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_cselib_p/src/cselib.c:882:25: error: use of undeclared identifier 'machine_mode'
e = cselib_lookup( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 0); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_cselib_p/src/cselib.c:882:40: error: expected expression
e = cselib_lookup( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 0); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_cselib_p/src/cselib.c:888:27: error: use of undeclared identifier 'machine_mode'
e_0 = cselib_lookup( y, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y), 0); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_cselib_p/src/cselib.c:888:42: error: expected expression
e_0 = cselib_lookup( y, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y), 0); 
                                         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
